# detectifz

./: README.md  detectifz_noversion.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
detectifz/: MembersUtils.py  README.txt  Untitled.ipynb  __init__.py  cleaning.py  density.py  detectifz.py  detection.py  fastdtfe.py  fastdtfe_nogrid.py  get_Mz_samples.py  members.py  membership_jwst.py  r200.py  setup_data.py  setup_data_old.py  structure.txt  tiling.py  utils.py  version.py
detectifz/tests/: test_detectifz.py
doc/: conf.py
examples/: ExampleRun.md  run_instructions.md
scripts/: LAUNCH_TILES.sh  LAUNCH_TILES_qsub.sh  README.txt  config_detectifz_WP11.ini  config_master_detectifz.py  config_master_detectifz_Euclid_infinity.ini  config_master_detectifz_GAEA.py  config_master_detectifz_H15_UDS.py  config_tile.py  config_tile_Euclid_infinity.ini  config_tile_GAEA.py  config_tile_WP11.ini  example_header.pickle  example_script_merge_detetction_catalogue_tiles.py  example_script_prepare_data_format.py  make_input_Euclid  make_master_cat.py  run_detectifz_notiling  run_detectifz_notiling.py  run_detectifz_tile  run_detectifz_tile.py  run_tiling  run_tiling.py
scripts/.deps/: gsl-histogram.Po  gsl-randist.Po  version.Plo
scripts/.libs/: gsl-histogram  gsl-randist  libgsl.28.dylib  libgsl.lai
scripts/configs/: config_detectifz_notiling.ini  config_detectifz_notiling_PLCK_PHZ_G221.09-54.59.ini  config_detectifz_notiling_PLCK_PHZ_G222.05-54.24.ini  config_detectifz_notiling_PLCK_PHZ_G222.75-55.98.ini  config_detectifz_notiling_name.ini  (+14 more)
(+18 files in other folders)
